--- a/css/style.css
+++ b/css/style.css
@@ -23,24 +23,54 @@ button{
     padding: 0;
     border: none;
     background-color: transparent;
-
+    cursor: pointer;
 }
 
 ul{
-list-style: none;
+    list-style: none;
 
 }
 
 body{
+    font-family: 'Inter', sans-serif;
     line-height: 1.2;
-    color:#0001
-
+    color:#000;
+    font-weight: 500;
+    font-size: 16px;
 }
 
 
 .container{
-
-
+    max-width: 1220 px;
+    padding-left: 0 10px;
+    margin: 0 auto;
 
 }
 
+header{
+    background: linear-gradient(180deg, #CADBEB 0%, rgba(235, 235, 235, 0.00) 100%);
+    height:  100vh;
+
+}
+
+.header_top{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 40px 0;
+
+}
+.menu__list{
+    display: flex;
+    align-items: center;
+    gap:0 40px;
+    font-weight: 700;
+}
+.menu_btn{
+    padding: 15px 58px;
+    border-radius: 30px;
+    background-color: #000;
+    font-weight: 700;
+    text-transform: uppercase;
+    color: #fff;
+}
