--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-html{
+.html{
 
     box-sizing: border-box;
 
@@ -12,26 +12,26 @@ html{
 
 }
 
-a{
+.a{
     color: inherit;
     text-decoration: none;
 
 
 }
 
-button{
+.button{
     padding: 0;
     border: none;
     background-color: transparent;
     cursor: pointer;
 }
 
-ul{
+.ul{
     list-style: none;
 
 }
 
-body{
+.body{
     font-family: 'Inter', sans-serif;
     line-height: 1.2;
     color:#000;
@@ -47,11 +47,13 @@ body{
 
 }
 
-header{
-    background: linear-gradient(180deg, #CADBEB 0%, rgba(235, 235, 235, 0.00) 100%);
-    height:  100vh;
-
+.header{
+    
+    min-height:  100vh;
+    position: relative;
 }
+
+
 
 .header_top{
     display: flex;
@@ -73,4 +75,53 @@ header{
     font-weight: 700;
     text-transform: uppercase;
     color: #fff;
+}
+
+.header_content-images{
+    text-align: center;
+    padding-bottom: 50px;
+}
+
+.header_content-images::before{
+    content: " ";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    background: linear-gradient(180deg, #CADBEB 0%, rgba(235, 235, 235, 0.00) 100%);    
+    z-index: -2;
+}
+
+
+
+.title{
+    font-size: 210px;
+    font-weight: 700;
+    position: absolute;
+    padding-top: 110px;
+}
+
+.title--pod{
+    position: relative;
+    z-index: -1;
+
+}
+
+.title--s{
+    display: inline-block;
+    transform: translateY(60px);
+
+}
+.title--M{
+    display: inline-block;
+    transform: translate(-57px,275px);
+}
+
+.title--ax{
+    display: inline-block;
+    transform: translate(-128px,375px);
+    z-index: -1;
+    position: relative;
 }
