--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-.html{
+html{
 
     box-sizing: border-box;
 
@@ -12,26 +12,26 @@
 
 }
 
-.a{
+a{
     color: inherit;
     text-decoration: none;
 
 
 }
 
-.button{
+button{
     padding: 0;
     border: none;
     background-color: transparent;
     cursor: pointer;
 }
 
-.ul{
+ul{
     list-style: none;
 
 }
 
-.body{
+body{
     font-family: 'Inter', sans-serif;
     line-height: 1.2;
     color:#000;
